testsuite/tests/indexed-types/should_fail/SimpleFail9.stderr

SimpleFail9.hs:16:3: error:
    • Type indexes must match class instance head
      Expected: S7 (a, Int)
        Actual: S7 (b, Int)
    • In the data instance declaration for ‘S7’
      In the instance declaration for ‘C7 Char (a, Int)’
